--- a/app/src/main/res/layout/keluarga.xml
+++ b/app/src/main/res/layout/keluarga.xml
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:fontFamily="@font/nunito_bold"
-        android:text="Dengan menekan tombol masuk berarti Anda menyetujui \n Ketentuan Penggunan dan Kebijakan Data kami"
+        android:text="@string/bold"
         android:textAlignment="center"
         android:textSize="5pt"
         app:layout_constraintBottom_toBottomOf="parent"
